--- a/TextViewer.cls
+++ b/TextViewer.cls
@@ -2017,7 +2017,7 @@ col(1) = 1
 End Sub
 Private Sub addone(ByVal thispos As Long, ByVal thiscolor As Long)
 Dim k As Long
-
+If thiscolor = 0 Then thiscolor = 14
 k = UBound(col())
 If VarType(col(0)) = 0 Then
 makebase 14
@@ -2351,7 +2351,12 @@ If FastSymbol(a$, ",") Then
   End If
 
     If FastSymbol(a$, ")") Then
+    If lastcol = 0 Then
+    addone pos2, 14
+    Else
+    
   addone pos2, lastcol
+  End If
     pos2 = k - Len(a$) + 1
   End If
   End If
@@ -2514,14 +2519,34 @@ If UBound(col()) > 1 Then
             Else
             col(1) = pos1
             End If
-If Left(a$, 1) = "}" Then
-Else
+If Left(a$, 1) <> "}" Then
 a$ = Mid$(a$, pos1 + 1)
 pos2 = k - Len(a$) + 1
 End If
 feedback = 0 'lastcol
 feedthis = 0
- 
+If MaybeIsSymbol(a$, "<>=~") Then
+    onetime = False
+            pos2 = k - Len(a$) + 1
+            addone pos2, 14
+
+    If FastSymbol(a$, "<") Then
+        If FastSymbol(a$, ">") Then
+        ElseIf FastSymbol(a$, "=") Then
+        End If
+        'pos2 = k - Len(a$) + 1
+        'addone pos2, 14
+    ElseIf FastSymbol(a$, ">") Then
+        
+        If FastSymbol(a$, "=") Then
+        End If
+        
+        
+    ElseIf FastSymbol(a$, "=") Then
+    ElseIf FastSymbol(a$, "~") Then
+    End If
+    
+End If
 Else
     GoTo nextline
 
@@ -2559,11 +2584,27 @@ again112:
     lastkind = 0
     onetime = False
     ElseIf FastSymbol(a$, "}") Then
+    
     lastkind = 0
          addone pos2, 14
     pos2 = k - Len(a$) + 1
-    onetime = True
-    If MaybeIsSymbol(a$, ".;+(") Then
+   
+    If MaybeIsSymbol(a$, ".;+(<>=~") Then
+    onetime = False
+    If FastSymbol(a$, "<") Then
+        
+        If FastSymbol(a$, ">") Then
+        ElseIf FastSymbol(a$, "=") Then
+        End If
+    ElseIf FastSymbol(a$, ">") Then
+        
+        If FastSymbol(a$, "=") Then
+        End If
+
+    ElseIf FastSymbol(a$, "=") Then
+    ElseIf FastSymbol(a$, "~") Then
+    End If
+    
 GoTo CheckThis
 End If
     GoTo again112
@@ -2733,6 +2774,7 @@ If IsNumberLabel(a$, drop$) Then
 If pos2 > 0 Then addone pos2, 14
 
 End Sub
+
 Private Sub ColorizeExpressions(ByVal a$, k As Long, pos2 As Long, feedthis As Long)
 Dim drop$, pos1 As Long, kind As Long, localfeedthis As Long, thispara1 As Long, lastpar As Long
 Dim lastcol As Long
