--- a/Hash.cls
+++ b/Hash.cls
@@ -70,6 +70,7 @@ End Sub
 
 Friend Sub ReduceHash(newTop As Long, v())
     Dim i As Long
+     If toplim < newTop Then Exit Sub
      For i = toplim To newTop Step -1
        With PriveSpace(i)
         
