--- a/sbHash.cls
+++ b/sbHash.cls
@@ -54,7 +54,7 @@ Private Sub ExpandHash()
 End Sub
 Friend Sub ReduceHash(newTop As Long, v() As modfun)
     Dim i As Long
-    
+    If toplim < newTop Then Exit Sub
     For i = toplim To newTop Step -1
        With PriveSpace(i)
         
