--- a/TextViewer.cls
+++ b/TextViewer.cls
@@ -2351,6 +2351,7 @@ If FastSymbol(a$, ",") Then
   End If
 
     If FastSymbol(a$, ")") Then
+    pos2 = k - Len(a$)
     If lastcol = 0 Then
     addone pos2, 14
     Else
